tests/xy_c_compile_resources/errors/errors.xy
struct Error {
    errorCode: Int,
}

func to(err: Error, :Bool) err.errorCode != 0;

;; Simple Error Issuing

func power(x: Int, y: Int) -> Int | Error {
    if (y < 0) {
        error Error{1};
    }
    i: mut = 0;
    return while (i <= y) -> (res: Int = 1) {
        res *= x;
        i++;
    };
}

;; Error Propagation

func errorPropagation(x: Int, y: Int) -> Int | Error {
    return power(x, y) - 1;
}

func doWork(x: Int) -> void | Error {
    y := power(x, x);
    print(y);
}

func print(a: Int) -> void {}

func doNothing() -> void | Error {}

func callReturningErrorButNoResult(a: Int, b: Int) -> void | Error {
    doWork(a);
    doWork(b);
}

;; Errors in functions that issue no errors or issue errors of a different kind

func errorInFuncThatDoesNotIssueAndError(x: Int, y: Int) -> Int {
    if (x < y) {
        error Error{1};
    }
    return x * y;
}

struct Error2 {
    errorCode: Int,
    a: Int,
    b: Int,
}

func errorInFuncThatIssuesDifferentKindOfError(x: Int, y: Int) -> Int | Error2 {
    if (x > 2*y) {
        error Error{1};
    }
    if (x >= y) error Error2{2, x, y};
    return x + y;
}